# Trabalho3-CG

./: .gitignore  CMakeLists.txt
include/: model_shape.h  obj_loader.h
include/glad/: glad.h
shaders/ilum_vert/: fragment.glsl  geometry.glsl  vertex.glsl  vertex_texture.glsl
src/: arcball.cpp  camera2d.cpp  camera3d.cpp  color.cpp  computeshader.cpp  cube.cpp  disk.cpp  error.cpp  framebuffer.cpp  glad.c  image.cpp  light.cpp  main_2d.cpp  main_3d.cpp  main_gpgpu.cpp  material.cpp  mesh.cpp  model_shape.cpp  node.cpp  obj_loader.cpp  polyoffset.cpp  quad.cpp  scene.cpp  shader.cpp  sphere.cpp  state.cpp  texbuffer.cpp  texcube.cpp  texdepth.cpp  texture.cpp  transform.cpp  triangle.cpp
